--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -403,9 +403,12 @@
   "staking.stakePools.rankingAllWalletsEnd": ".",
   "staking.stakePools.rankingAllWalletsStart": "Stake pools are currently ranked based on the combined amount in",
   "staking.stakePools.rankingDescription": "Use the slider to rank the stake pools based on the amount you intend to delegate.",
+  "staking.stakePools.rankingExtraTooltip": "Circulating supply",
+  "staking.stakePools.rankingMaxTooltip": "Saturation point",
+  "staking.stakePools.rankingMinTooltip": "Minimum ADA required for staking",
   "staking.stakePools.rankingOneWalletEnd": "wallet.",
   "staking.stakePools.rankingOneWalletStart": "Stake pools are currently ranked based on the amount in",
-  "staking.stakePools.rankingSelectWallet": "select a wallet",
+  "staking.stakePools.rankingSelectWallet": "a wallet",
   "staking.stakePools.rankingSelectWalletEnd": "to set the amount you intend to delegate.",
   "staking.stakePools.rankingSelectWalletStart": "Or choose",
   "staking.stakePools.search.delegatingListTitle": "Staking pools you are delegating to",
