--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -408,9 +408,9 @@
   "staking.stakePools.rankingMinTooltip": "Minimum ADA required for staking",
   "staking.stakePools.rankingOneWalletEnd": "wallet.",
   "staking.stakePools.rankingOneWalletStart": "Stake pools are currently ranked based on the amount in",
-  "staking.stakePools.rankingSelectWallet": "a wallet",
+  "staking.stakePools.rankingSelectWallet": "select a wallet",
   "staking.stakePools.rankingSelectWalletEnd": "to set the amount you intend to delegate.",
-  "staking.stakePools.rankingSelectWalletStart": "Or choose",
+  "staking.stakePools.rankingSelectWalletStart": "Or",
   "staking.stakePools.search.delegatingListTitle": "Staking pools you are delegating to",
   "staking.stakePools.search.listTitle": "Stake pools ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "Search stake pools",
