--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -384,6 +384,10 @@
   "staking.navigation.info": "Info",
   "staking.navigation.rewards": "Rewards",
   "staking.navigation.stake_pools": "Stake pools",
+  "staking.redeemItnRewards.step1.invalidRecoveryPhrase": "Invalid recovery phrase",
+  "staking.redeemItnRewards.step1.noResults": "No results",
+  "staking.redeemItnRewards.step1.recoveryPhraseInputHint": "Enter recovery phraset",
+  "staking.redeemItnRewards.step1.selectWalletInputPlaceholder": "Select Wallet",
   "staking.redeemItnRewards.step1.checkbox1Label": "I understand that redeeming rewards from the Incentivized Testnet requires paying transaction fees.",
   "staking.redeemItnRewards.step1.checkbox2Label": "I understand that fees will be paid from the wallet I am redeeming my rewards to.",
   "staking.redeemItnRewards.step1.continueButton.label": "Continue",
