[DDW-178] final component elements

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -399,6 +399,7 @@
   "staking.redeemItnRewards.step1.title": "Redeem Incentivized Testnet rewards",
   "staking.redeemItnRewards.step1.walletsDropdownError": "The selected wallet does not have sufficient ada to cover the necessary transaction fees. Please choose another wallet or add more funds to this one.",
   "staking.redeemItnRewards.step1.walletsDropdownLabel": "Redeem rewards to:",
+  "staking.redeemItnRewards.step2.backButtonLabel": "Back",
   "staking.redeemItnRewards.step2.continueButtonLabel": "Confirm rewards redemption",
   "staking.redeemItnRewards.step2.finalTotal": "Final total",
   "staking.redeemItnRewards.step2.rewardsTotal": "Rewards total",
@@ -410,6 +411,8 @@
   "staking.redeemItnRewards.step2.walletToName": "{walletName} <span>wallet</span>",
   "staking.redeemItnRewards.step3.failure.description": "No rewards were found in your Incentivized Testnet Rewards wallet. Please make sure that you have entered the correct wallet recovery phrase.",
   "staking.redeemItnRewards.step3.failure.backButtonLabel": "Back",
+  "staking.redeemItnRewards.step3.failure.closeWindowLinkLabel": "Close window",
+  "staking.redeemItnRewards.step3.success.title": "Incentivized Testnet rewards redeemed!",
   "staking.redeemItnRewards.step3.success.description": "You have successfully redeemed <b>{finalTotal}</b> ADA to your <b>{walletName}</b> wallet. This transaction incurred <b>{transactionFees}</b> in transaction fees",
   "staking.redeemItnRewards.step3.success.downloadPDFButtonLabel": "Download PDF certificate",
   "staking.redeemItnRewards.step3.success.openWalletButtonLabel": "Open the wallet",
