[DDW-178] Translation copy

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -384,18 +384,21 @@
   "staking.navigation.info": "Info",
   "staking.navigation.rewards": "Rewards",
   "staking.navigation.stake_pools": "Stake pools",
-  "staking.redeemItnRewards.step1.invalidRecoveryPhrase": "Invalid recovery phrase",
-  "staking.redeemItnRewards.step1.noResults": "No results",
-  "staking.redeemItnRewards.step1.recoveryPhraseInputHint": "Enter recovery phraset",
-  "staking.redeemItnRewards.step1.selectWalletInputPlaceholder": "Select Wallet",
+  "staking.redeemItnRewards.noWallets.addWalletButtonLabel": "Add wallet",
+  "staking.redeemItnRewards.noWallets.description": "Redemption of Incentivized Testnet rewards is not available as you currently do not have any Shelley-compatible wallets.",
   "staking.redeemItnRewards.step1.checkbox1Label": "I understand that redeeming rewards from the Incentivized Testnet requires paying transaction fees.",
   "staking.redeemItnRewards.step1.checkbox2Label": "I understand that fees will be paid from the wallet I am redeeming my rewards to.",
   "staking.redeemItnRewards.step1.continueButton.label": "Continue",
+  "staking.redeemItnRewards.step1.description": "If you participated in the { itnLink } and earned rewards by running a stake pool or delegating your stake, you can use this feature to redeem your rewards as ada on the Cardano mainnet. You will need the wallet recovery phrase for the Incentivized Testnet wallet used to earn rewards and an existing mainnet wallet in Daedalus to which the rewards will be transferred. This wallet will also be used to pay any applicable transaction fees.",
+  "staking.redeemItnRewards.step1.descriptionItnLinkLabel": "Incentivized Testnet",
+  "staking.redeemItnRewards.step1.descriptionItnLinkUrl": "https://staking.cardano.org/",
+  "staking.redeemItnRewards.step1.invalidRecoveryPhrase": "Invalid recovery phrase",
   "staking.redeemItnRewards.step1.learnMoreLink.label": "Learn More",
-  "staking.redeemItnRewards.step1.learnMoreLink.url": "http://iohk.io",
-  "staking.redeemItnRewards.step1.description": "If you participated in the Incentivized Testnet and earned rewards by running a stake pool or delegating your stake, you can use this feature to redeem your rewards as ada on the Cardano mainnet. You will need the wallet recovery phrase for the Incentivized Testnet wallet used to earn rewards and an existing mainnet wallet in Daedalus to which the rewards will be transferred. This wallet will also be used to pay any applicable transaction fees.",
-  "staking.redeemItnRewards.step1.learnMoreLinkLabel": "Learn More",
+  "staking.redeemItnRewards.step1.learnMoreLink.url": "https://staking.cardano.org/",
+  "staking.redeemItnRewards.step1.noResults": "No results",
+  "staking.redeemItnRewards.step1.recoveryPhraseInputHint": "Enter recovery phrase",
   "staking.redeemItnRewards.step1.recoveryPhraseLabel": "Wallet recovery phrase for your Incentivized Testnet Rewards wallet:",
+  "staking.redeemItnRewards.step1.selectWalletInputPlaceholder": "Select Wallet",
   "staking.redeemItnRewards.step1.title": "Redeem Incentivized Testnet rewards",
   "staking.redeemItnRewards.step1.walletsDropdownError": "The selected wallet does not have sufficient ada to cover the necessary transaction fees. Please choose another wallet or add more funds to this one.",
   "staking.redeemItnRewards.step1.walletsDropdownLabel": "Redeem rewards to:",
@@ -409,15 +412,15 @@
   "staking.redeemItnRewards.step2.transactionFees": "Transaction fees",
   "staking.redeemItnRewards.step2.walletToLabel": "To",
   "staking.redeemItnRewards.step2.walletToName": "{walletName} <span>wallet</span>",
-  "staking.redeemItnRewards.step3.failure.description": "No rewards were found in your Incentivized Testnet Rewards wallet. Please make sure that you have entered the correct wallet recovery phrase.",
   "staking.redeemItnRewards.step3.failure.backButtonLabel": "Back",
   "staking.redeemItnRewards.step3.failure.closeWindowLinkLabel": "Close window",
-  "staking.redeemItnRewards.step3.success.title": "Incentivized Testnet rewards redeemed!",
-  "staking.redeemItnRewards.step3.success.description": "You have successfully redeemed <b>{finalTotal}</b> ADA to your <b>{walletName}</b> wallet. This transaction incurred <b>{transactionFees}</b> in transaction fees",
+  "staking.redeemItnRewards.step3.failure.description1NoRewards": "No rewards were found in your Incentivized Testnet Rewards wallet. Please make sure that you have entered the correct wallet recovery phrase.",
+  "staking.redeemItnRewards.step3.failure.description2InvalidWallet": "Rewards from the wallet corresponding to the recovery phrase you have provided have already been redeemed.",
+  "staking.redeemItnRewards.step3.failure.description3Generic": "No rewards were found in your Incentivized Testnet Rewards wallet. Please make sure that you have entered the correct wallet recovery phrase and that rewards have not already been redeemed.",
+  "staking.redeemItnRewards.step3.success.description": "You have successfully redeemed <b>{finalTotal}</b> ada to your <b>{walletName}</b> wallet. This transaction incurred <b>{transactionFees}</b> ada in transaction fees.",
   "staking.redeemItnRewards.step3.success.downloadPDFButtonLabel": "Download PDF certificate",
   "staking.redeemItnRewards.step3.success.openWalletButtonLabel": "Open the wallet",
-  "staking.redeemItnRewards.noWallets.description": "Redemption of Incentivized Testnet rewards is not available as you currently do not have any Shelley-compatible wallets.",
-  "staking.redeemItnRewards.noWallets.addWalletButtonLabel": "Add wallet",
+  "staking.redeemItnRewards.step3.success.title": "Incentivized Testnet rewards redeemed!",
   "staking.rewards.exportButtonLabel": "Export CSV",
   "staking.rewards.learnMore.ButtonLabel": "Learn more",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us/articles/900000026583",
