--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -533,6 +533,7 @@
   "wallet.create.dialog.passwordFieldPlaceholder": "パスワード",
   "wallet.create.dialog.passwordSectionDescription": "送信時パスワードを設定してウォレットを安全に保ちましょう",
   "wallet.create.dialog.passwordSectionLabel": "送金時パスワード",
+  "wallet.create.dialog.passwordTooltip": "!!!It is really good to use Password Manager apps to improve security. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis diam non nulla sollicitudin, ac ultrices purus luctus.",
   "wallet.create.dialog.repeatPasswordLabel": "パスワードを再入力してください",
   "wallet.create.dialog.spendingPasswordLabel": "パスワードを入力してください",
   "wallet.create.dialog.stepsCounter": "ステップ{currentStep}/{totalSteps}",
