--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -112,7 +112,6 @@
   "global.duration.months": "月",
   "global.duration.seconds": "秒",
   "global.duration.years": "年",
-  "global.errors.failureAlert": "!!!Failure Alert",
   "global.errors.fieldIsRequired": "必須フィールドです",
   "global.errors.incompleteMnemonic": "{expected}語を入力して下さい。",
   "global.errors.invalidEmail": "入力されたメールアドレスは無効です。確認してください。",
@@ -130,7 +129,6 @@
   "global.labels.close": "閉じる",
   "global.labels.create": "作成",
   "global.labels.filter": "フィルター",
-  "global.labels.readMore": "!!!Read More",
   "global.labels.remove": "削除",
   "global.labels.reset": "リセット",
   "global.labels.save": "保存する",
@@ -420,7 +418,6 @@
   "static.about.copyright": "Input Output HK Limited. Licensed under",
   "static.about.license": "Apache 2.0 license",
   "static.about.title": "Daedalus",
-  "static.dummy.markdown": "!!!Content",
   "static.splash.network.buttonLabel": "了解しました",
   "static.splash.network.flightDescription1": "Daedalus Flightウォレットをダウンロードいただきありがとうございます。このDaedalusバージョンは、Daedalusウォレットの製品バージョンをメインネットへリリースする前に、ユーザーが新機能をテストし、開発チームが使用性に関するバグに対処するために特別に作成したバージョンです。",
   "static.splash.network.flightDescription2": "Flight候補版は機能性をテストするためにデザインされていますが、これはメインネットに接続されており、<b>メインネットのADAを使用します。Flight候補版を使用して実行されるトランザクションでは実際のADAによる支払いが生じます。</b>パワーユーザー以外は、完全にテスト済みの安定した製品版Daedalusウォレットの使用を継続することを推奨します。Daedalus Flightウォレットで実行されるトランザクションは実際のものであり、すべてのトランザクションはCardanoブロックチェーンにメインネット上で検証されるため、ユーザーの資金は実際に送金されるということを十分に理解してください。",
@@ -784,12 +781,14 @@
   "wallet.statusMessages.activeRestore": "ウォレットの残高とトランザクション履歴はブロックチェーンと{percentage}%同期されました。",
   "wallet.summary.no.transactions": "最近のトランザクションはありません",
   "wallet.summary.page.pendingTransactionsLabel": "処理中のトランザクション数",
-  "wallet.summary.page.rewardsAccountBalancelabel": "報酬アカウント残高",
+  "wallet.summary.page.rewardsAccountBalancelabel": "報酬残高",
+  "wallet.summary.page.rewardsSpendingNote": "*Daedalusバージョンにおける報酬送金の仮制限",
   "wallet.summary.page.showMoreTransactionsButtonLabel": "もっと表示",
   "wallet.summary.page.syncingTransactionsMessage": "ウォレットのトランザクション履歴は現在ブロックチェーンと同期中です。",
   "wallet.summary.page.todayLabel": "今日",
   "wallet.summary.page.transactionsLabel": "トランザクション数",
-  "wallet.summary.page.walletBalancelabel": "ウォレット残高",
+  "wallet.summary.page.walletAvailableBalanceLabel": "利用可能残高*",
+  "wallet.summary.page.walletBalancelabel": "合計残高",
   "wallet.summary.page.yesterdayLabel": "昨日",
   "wallet.transaction.address.from": "送信元",
   "wallet.transaction.address.to": "送信先",
