--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -394,7 +394,7 @@
   "staking.redeemItnRewards.step1.descriptionItnLinkUrl": "https://staking.cardano.org/",
   "staking.redeemItnRewards.step1.invalidRecoveryPhrase": "Invalid recovery phrase",
   "staking.redeemItnRewards.step1.learnMoreLink.label": "Learn More",
-  "staking.redeemItnRewards.step1.learnMoreLink.url": "https://staking.cardano.org/",
+  "staking.redeemItnRewards.step1.learnMoreLink.url": "https://iohk.zendesk.com/hc/en-us/articles/900001656586",
   "staking.redeemItnRewards.step1.noResults": "No results",
   "staking.redeemItnRewards.step1.recoveryPhraseInputHint": "Enter recovery phrase",
   "staking.redeemItnRewards.step1.recoveryPhraseLabel": "Wallet recovery phrase for your Incentivized Testnet Rewards wallet:",
